# lidar_camera_projection

./: .gitignore  CMakeLists.txt  inbox_view.rviz  package.xml  readme.md
doc/: ARCHITECTURE.md  decisions.md  progress.md
docs/: ARCHITECTURE.md  decisions.md  progress.md  troubleshooting.md
include/lidar_camera_projection/: detections.hpp  detections_loader.hpp  point_lookup.hpp  transform_utils.hpp
launch/: lidar_camera_transform.launch  lidar_filter.launch  lidar_filter_pure.launch
src/: camera_frame_filter_node.cpp  camera_frame_node.cpp  detections_loader.cpp  detections_publisher_node.cpp  lidar_filter_node.cpp  lidar_filter_pure_node.cpp  point_lookup.cpp  transform_utils.cpp
