<?xml version='1.0'?>
<package format='2'>
  <name>lidar_camera_projection</name>
  <version>0.1.0</version>
  <description>Receive Livox lidar pointcloud, filter x&gt;0 and voxel downsample, republish</description>
  <maintainer email='robot@example.com'>robot</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>tf2_eigen</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>tf2_eigen</exec_depend>

  <export></export>
</package>